# wadpunk

./: .eslintignore  .eslintrc.js  .gitignore  .npmrc  CHANGELOG.md  README.md  codegen.ts  graphql.config.cjs  index.html  mise.toml  package.json  pnpm-lock.yaml  prettier.config.cjs  rustfmt.toml  schema.graphql  tauri-updater.json  test.graphql  tsconfig.json  vcpkg.json  vite.config.ts
.github/workflows/: main.yml  pull-request.yml  release.yml
patches/: final-form@4.20.10.patch
script/: build  deploy  downsample-icon  generate-tauri-updater  generate-tauri-updater-json  prepare-env  release-finalize  release-prepare  start
src/: App.tsx  index.tsx  main.tsx  react-scripts-vite.d.ts
src-tauri/: Cargo.toml  schema.graphql  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/resources-arch-specific-source/x86_64-apple-darwin/: 7za
src-tauri/schema/object_type/: list_item.rs
src-tauri/sidecar/7zip/: 7z.dll-aarch64-pc-windows-msvc  7za-x86_64-apple-darwin
src-tauri/src/: database.rs  importer.rs  known_source_ports.rs  main.rs
src-tauri/src/datasource/: mod.rs
src-tauri/src/graphql/: datasource.rs  mod.rs
src-tauri/src/tauri_commands/: mod.rs  playground.rs
src-tauri/src/tauri_helpers/: mod.rs  reveal_in_finder.rs
src/app/: App.tsx  AppCogMenu.tsx  AppToolbarArea.tsx  OnboardingAlerts.tsx  UpdateNotifier.tsx  operations.graphql  theme.ts
src/final-form/: FinalFormResetButton.tsx  FinalFormSubmitButton.tsx  IdentityField.tsx  TextareaField.tsx
src/games/: GameDialog.tsx  GameDialogFileList.tsx  (+11 more)
(+52 files in other folders)
