[package]
name = "wadpunk"
version = "0.0.0"
description = "A wad organizer / GZDoom launcher inspired by Doom Launcher"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "shell-open", "process-relaunch", "process-exit", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-graphql = "2.0.0"
async-graphql = "5.0.0"
chrono = "0.4.31"
plist = "1.6.0"
tauri-plugin-window-state = "0.1.1"
fs_extra = "1.3.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# Strip expensive panic clean-up logic
panic = "abort"
# Compile crates one after another so the compiler can optimize better
codegen-units = 1
# Enables link to optimizations
lto = true
# Optimize for binary size
opt-level = "s"
# Remove debug symbols
strip = true
